--- a/index.html
+++ b/index.html
@@ -281,13 +281,13 @@
                 <div class="footer-brand"><span class="logo-text-footer">Rahma Islamic Centre</span><p>A vibrant Islamic center dedicated to the spiritual, educational, and social needs of Muslims in Winnipeg since 2016.</p><div class="footer-social"><a href="#"><i class="fab fa-facebook-f"></i></a><a href="#"><i class="fab fa-youtube"></i></a><a href="#"><i class="fab fa-instagram"></i></a></div></div>
                 <div class="footer-col"><h4>Navigation</h4><ul><li><a href="index.html">Home</a></li><li><a href="prayer-times.html">Prayer Times</a></li><li><a href="activities.html">Activities &amp; Services</a></li><li><a href="about.html">About Us</a></li><li><a href="contact.html">Contact Us</a></li></ul></div>
                 <div class="footer-col"><h4>Programs</h4><ul><li><a href="activities.html">Sisters' Halaqa</a></li><li><a href="activities.html">Kids Quran Class</a></li><li><a href="activities.html">Quran Hifz</a></li><li><a href="activities.html">Study Club</a></li><li><a href="activities.html">Daily Prayers</a></li></ul></div>
-                <div class="footer-col"><h4>Contact</h4><div class="contact-li"><i class="fas fa-map-marker-alt"></i><span>574 Watt St, Winnipeg, MB R2K 4K1</span></div><div class="contact-li"><i class="fas fa-phone"></i><span>+1 (431) 792-3791</span></div><div class="contact-li"><i class="fas fa-envelope"></i><span>info@rahmacentre.ca</span></div></div>
+                <div class="footer-col"><h4>Contact</h4><div class="contact-li"><i class="fas fa-map-marker-alt"></i><span>574 Watt St, Winnipeg, MB R2K 4K1</span></div><div class="contact-li"><i class="fas fa-phone"></i><span>+1 (431) 792-3791</span></div><div class="contact-li"><i class="fas fa-envelope"></i><span><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="5a33343c351a283b32373b393f342e283f74393b">[email&#160;protected]</a></span></div></div>
             </div>
             <div class="footer-bottom"><span>Copyright &copy; 2026 Rahma Islamic Centre. All rights reserved.</span><span>Powered by Devodez Solutions</span></div>
         </div>
     </footer>
 
-    <script src="shared.js"></script>
+    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="shared.js"></script>
     <script>
         // Clock
         function updateTime() { document.getElementById('currentTime').textContent = new Date().toLocaleTimeString('en-US',{hour:'2-digit',minute:'2-digit',hour12:true}); }
@@ -337,7 +337,3 @@
             currentCurrency=cur; document.getElementById('currencyTag').textContent=cur;
             ['CAD','USD'].forEach(c=>{ const b=document.getElementById('btn'+c); b.style.background=c===cur?'rgba(201,168,76,0.15)':'transparent'; b.style.borderColor=c===cur?'var(--gold)':'rgba(255,255,255,0.15)'; b.style.color=c===cur?'var(--gold)':'rgba(255,255,255,0.5)'; });
         }
-        function processDonation() { const a=parseFloat(document.getElementById('donateAmt').value); if(!a||a<=0){alert('Please enter a valid amount.');return;} window.location.href='donate.html'; }
-    </script>
-</body>
-</html>
