--- a/education.html
+++ b/education.html
@@ -14,7 +14,7 @@
     <div id="loader"><div class="loader-text">RAHMA</div><div class="loader-bar"><div class="loader-fill"></div></div></div>
     <nav class="navbar" id="navbar">
         <div class="navbar-inner">
-            <a href="index.html" class="logo-wrap"><img src="logo.png" alt="Rahma Logo" class="logo-img"><div class="logo-text">Rahma Islamic Centre<span>Winnipeg, Canada</span></div></a>
+            <a href="index.html" class="logo-wrap"><img src="logo.png" alt="Logo" class="logo-img"><div class="logo-text">Rahma Islamic Centre<span>Winnipeg, Canada</span></div></a>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="prayer-times.html">Prayer Times</a></li>
@@ -37,94 +37,64 @@
         <div class="container" style="max-width:1100px;margin:0 auto">
             <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(450px,1fr));gap:24px">
                 
-                <div style="background:#fff;padding:28px 30px;border-left:4px solid #C9A84C;display:flex;gap:20px;align-items:start">
-                    <span style="font-family:'Cinzel',serif;font-size:2.2rem;font-weight:700;color:#C9A84C;opacity:0.25;line-height:1">01</span>
-                    <div>
-                        <h3 style="font-family:'Cinzel',serif;font-size:1.15rem;margin-bottom:8px;color:#0B1F3A">Adult Quran Class</h3>
-                        <p style="font-size:0.9rem;color:#6b7f95;line-height:1.6;margin-bottom:10px">Comprehensive Quran study for adults focusing on recitation, tajweed, and understanding.</p>
-                        <div style="font-size:0.85rem;color:#C9A84C;font-weight:500"><i class="fas fa-info-circle"></i> Contact for Schedule</div>
-                    </div>
+                <div style="background:#fff;padding:28px 30px;border-left:4px solid #C9A84C;display:flex;gap:18px">
+                    <span style="font-family:'Cinzel',serif;font-size:2rem;font-weight:700;color:#C9A84C;opacity:0.25">01</span>
+                    <div><h3 style="font-size:1.1rem;margin-bottom:8px;color:#0B1F3A">Adult Quran Class</h3>
+                    <p style="font-size:0.9rem;color:#6b7f95">Comprehensive Quran study for adults</p></div>
                 </div>
 
-                <div style="background:#fff;padding:28px 30px;border-left:4px solid #C9A84C;display:flex;gap:20px;align-items:start">
-                    <span style="font-family:'Cinzel',serif;font-size:2.2rem;font-weight:700;color:#C9A84C;opacity:0.25;line-height:1">02</span>
-                    <div>
-                        <h3 style="font-family:'Cinzel',serif;font-size:1.15rem;margin-bottom:8px;color:#0B1F3A">Sisters' Quran Class</h3>
-                        <p style="font-size:0.9rem;color:#6b7f95;line-height:1.6;margin-bottom:10px">A special Quran class tailored for women to study the Quran in a welcoming environment.</p>
-                        <div style="font-size:0.85rem;color:#C9A84C;font-weight:500"><i class="fas fa-info-circle"></i> Contact for Schedule</div>
-                    </div>
+                <div style="background:#fff;padding:28px 30px;border-left:4px solid #C9A84C;display:flex;gap:18px">
+                    <span style="font-family:'Cinzel',serif;font-size:2rem;font-weight:700;color:#C9A84C;opacity:0.25">02</span>
+                    <div><h3 style="font-size:1.1rem;margin-bottom:8px;color:#0B1F3A">Sisters' Quran Class</h3>
+                    <p style="font-size:0.9rem;color:#6b7f95">Quran class tailored for women</p></div>
                 </div>
 
-                <div style="background:#fff;padding:28px 30px;border-left:4px solid #C9A84C;display:flex;gap:20px;align-items:start">
-                    <span style="font-family:'Cinzel',serif;font-size:2.2rem;font-weight:700;color:#C9A84C;opacity:0.25;line-height:1">03</span>
-                    <div>
-                        <h3 style="font-family:'Cinzel',serif;font-size:1.15rem;margin-bottom:8px;color:#0B1F3A">Adult Arabic Class</h3>
-                        <p style="font-size:0.9rem;color:#6b7f95;line-height:1.6;margin-bottom:10px">Learn to read, write, and understand Arabic - the language of the Quran.</p>
-                        <div style="font-size:0.85rem;color:#C9A84C;font-weight:500"><i class="fas fa-calendar"></i> Wednesdays</div>
-                    </div>
+                <div style="background:#fff;padding:28px 30px;border-left:4px solid #C9A84C;display:flex;gap:18px">
+                    <span style="font-family:'Cinzel',serif;font-size:2rem;font-weight:700;color:#C9A84C;opacity:0.25">03</span>
+                    <div><h3 style="font-size:1.1rem;margin-bottom:8px;color:#0B1F3A">Adult Arabic Class</h3>
+                    <p style="font-size:0.9rem;color:#6b7f95"><strong style="color:#C9A84C">Wednesdays</strong></p></div>
                 </div>
 
-                <div style="background:#fff;padding:28px 30px;border-left:4px solid #C9A84C;display:flex;gap:20px;align-items:start">
-                    <span style="font-family:'Cinzel',serif;font-size:2.2rem;font-weight:700;color:#C9A84C;opacity:0.25;line-height:1">04</span>
-                    <div>
-                        <h3 style="font-family:'Cinzel',serif;font-size:1.15rem;margin-bottom:8px;color:#0B1F3A">Kids Weekend Quran Class</h3>
-                        <p style="font-size:0.9rem;color:#6b7f95;line-height:1.6;margin-bottom:10px">Quran class for children focusing on recitation, understanding, and memorization.</p>
-                        <div style="font-size:0.85rem;color:#C9A84C;font-weight:500"><i class="fas fa-calendar"></i> Saturdays & Sundays</div>
-                    </div>
+                <div style="background:#fff;padding:28px 30px;border-left:4px solid #C9A84C;display:flex;gap:18px">
+                    <span style="font-family:'Cinzel',serif;font-size:2rem;font-weight:700;color:#C9A84C;opacity:0.25">04</span>
+                    <div><h3 style="font-size:1.1rem;margin-bottom:8px;color:#0B1F3A">Kids Weekend Quran Class</h3>
+                    <p style="font-size:0.9rem;color:#6b7f95"><strong style="color:#C9A84C">Saturdays & Sundays</strong></p></div>
                 </div>
 
-                <div style="background:#fff;padding:28px 30px;border-left:4px solid #C9A84C;display:flex;gap:20px;align-items:start">
-                    <span style="font-family:'Cinzel',serif;font-size:2.2rem;font-weight:700;color:#C9A84C;opacity:0.25;line-height:1">05</span>
-                    <div>
-                        <h3 style="font-family:'Cinzel',serif;font-size:1.15rem;margin-bottom:8px;color:#0B1F3A">After School Study Club</h3>
-                        <p style="font-size:0.9rem;color:#6b7f95;line-height:1.6;margin-bottom:10px">Supportive environment for students to complete homework and strengthen academic skills.</p>
-                        <div style="font-size:0.85rem;color:#C9A84C;font-weight:500"><i class="fas fa-calendar"></i> Weekdays After School</div>
-                    </div>
+                <div style="background:#fff;padding:28px 30px;border-left:4px solid #C9A84C;display:flex;gap:18px">
+                    <span style="font-family:'Cinzel',serif;font-size:2rem;font-weight:700;color:#C9A84C;opacity:0.25">05</span>
+                    <div><h3 style="font-size:1.1rem;margin-bottom:8px;color:#0B1F3A">After School Study Club</h3>
+                    <p style="font-size:0.9rem;color:#6b7f95">Academic support for students</p></div>
                 </div>
 
-                <div style="background:#fff;padding:28px 30px;border-left:4px solid #C9A84C;display:flex;gap:20px;align-items:start">
-                    <span style="font-family:'Cinzel',serif;font-size:2.2rem;font-weight:700;color:#C9A84C;opacity:0.25;line-height:1">06</span>
-                    <div>
-                        <h3 style="font-family:'Cinzel',serif;font-size:1.15rem;margin-bottom:8px;color:#0B1F3A">Fajr Halaqa</h3>
-                        <p style="font-size:0.9rem;color:#6b7f95;line-height:1.6;margin-bottom:10px">Early morning knowledge session following Fajr prayer for spiritual growth.</p>
-                        <div style="font-size:0.85rem;color:#C9A84C;font-weight:500"><i class="fas fa-calendar"></i> Sundays</div>
-                    </div>
+                <div style="background:#fff;padding:28px 30px;border-left:4px solid #C9A84C;display:flex;gap:18px">
+                    <span style="font-family:'Cinzel',serif;font-size:2rem;font-weight:700;color:#C9A84C;opacity:0.25">06</span>
+                    <div><h3 style="font-size:1.1rem;margin-bottom:8px;color:#0B1F3A">Fajr Halaqa</h3>
+                    <p style="font-size:0.9rem;color:#6b7f95"><strong style="color:#C9A84C">Sundays</strong></p></div>
                 </div>
 
-                <div style="background:#fff;padding:28px 30px;border-left:4px solid #C9A84C;display:flex;gap:20px;align-items:start">
-                    <span style="font-family:'Cinzel',serif;font-size:2.2rem;font-weight:700;color:#C9A84C;opacity:0.25;line-height:1">07</span>
-                    <div>
-                        <h3 style="font-family:'Cinzel',serif;font-size:1.15rem;margin-bottom:8px;color:#0B1F3A">Adult Tajweed Literacy</h3>
-                        <p style="font-size:0.9rem;color:#6b7f95;line-height:1.6;margin-bottom:10px">Master the rules of Quranic recitation with proper pronunciation and tajweed.</p>
-                        <div style="font-size:0.85rem;color:#C9A84C;font-weight:500"><i class="fas fa-calendar"></i> Fridays</div>
-                    </div>
+                <div style="background:#fff;padding:28px 30px;border-left:4px solid #C9A84C;display:flex;gap:18px">
+                    <span style="font-family:'Cinzel',serif;font-size:2rem;font-weight:700;color:#C9A84C;opacity:0.25">07</span>
+                    <div><h3 style="font-size:1.1rem;margin-bottom:8px;color:#0B1F3A">Adult Tajweed Literacy</h3>
+                    <p style="font-size:0.9rem;color:#6b7f95"><strong style="color:#C9A84C">Fridays</strong></p></div>
                 </div>
 
-                <div style="background:#fff;padding:28px 30px;border-left:4px solid #C9A84C;display:flex;gap:20px;align-items:start">
-                    <span style="font-family:'Cinzel',serif;font-size:2.2rem;font-weight:700;color:#C9A84C;opacity:0.25;line-height:1">08</span>
-                    <div>
-                        <h3 style="font-family:'Cinzel',serif;font-size:1.15rem;margin-bottom:8px;color:#0B1F3A">Beginner Quran Class</h3>
-                        <p style="font-size:0.9rem;color:#6b7f95;line-height:1.6;margin-bottom:10px">Start your journey with the Quran - perfect for those learning to read Arabic.</p>
-                        <div style="font-size:0.85rem;color:#C9A84C;font-weight:500"><i class="fas fa-calendar"></i> Mondays & Tuesdays</div>
-                    </div>
+                <div style="background:#fff;padding:28px 30px;border-left:4px solid #C9A84C;display:flex;gap:18px">
+                    <span style="font-family:'Cinzel',serif;font-size:2rem;font-weight:700;color:#C9A84C;opacity:0.25">08</span>
+                    <div><h3 style="font-size:1.1rem;margin-bottom:8px;color:#0B1F3A">Beginner Quran Class</h3>
+                    <p style="font-size:0.9rem;color:#6b7f95"><strong style="color:#C9A84C">Mondays & Tuesdays</strong></p></div>
                 </div>
 
-                <div style="background:#fff;padding:28px 30px;border-left:4px solid #C9A84C;display:flex;gap:20px;align-items:start">
-                    <span style="font-family:'Cinzel',serif;font-size:2.2rem;font-weight:700;color:#C9A84C;opacity:0.25;line-height:1">09</span>
-                    <div>
-                        <h3 style="font-family:'Cinzel',serif;font-size:1.15rem;margin-bottom:8px;color:#0B1F3A">Boys Hifdh Program</h3>
-                        <p style="font-size:0.9rem;color:#6b7f95;line-height:1.6;margin-bottom:10px">Quran memorization program for boys with qualified instructors.</p>
-                        <div style="font-size:0.85rem;color:#C9A84C;font-weight:500"><i class="fas fa-calendar"></i> Saturdays & Sundays After Fajr</div>
-                    </div>
+                <div style="background:#fff;padding:28px 30px;border-left:4px solid #C9A84C;display:flex;gap:18px">
+                    <span style="font-family:'Cinzel',serif;font-size:2rem;font-weight:700;color:#C9A84C;opacity:0.25">09</span>
+                    <div><h3 style="font-size:1.1rem;margin-bottom:8px;color:#0B1F3A">Boys Hifdh Program</h3>
+                    <p style="font-size:0.9rem;color:#6b7f95"><strong style="color:#C9A84C">Saturdays & Sundays After Fajr</strong></p></div>
                 </div>
 
-                <div style="background:#fff;padding:28px 30px;border-left:4px solid #C9A84C;display:flex;gap:20px;align-items:start">
-                    <span style="font-family:'Cinzel',serif;font-size:2.2rem;font-weight:700;color:#C9A84C;opacity:0.25;line-height:1">10</span>
-                    <div>
-                        <h3 style="font-family:'Cinzel',serif;font-size:1.15rem;margin-bottom:8px;color:#0B1F3A">Hifdh Class</h3>
-                        <p style="font-size:0.9rem;color:#6b7f95;line-height:1.6;margin-bottom:10px">Structured Quran memorization program for dedicated students.</p>
-                        <div style="font-size:0.85rem;color:#C9A84C;font-weight:500"><i class="fas fa-calendar"></i> Mondays & Tuesdays</div>
-                    </div>
+                <div style="background:#fff;padding:28px 30px;border-left:4px solid #C9A84C;display:flex;gap:18px">
+                    <span style="font-family:'Cinzel',serif;font-size:2rem;font-weight:700;color:#C9A84C;opacity:0.25">10</span>
+                    <div><h3 style="font-size:1.1rem;margin-bottom:8px;color:#0B1F3A">Hifdh Class</h3>
+                    <p style="font-size:0.9rem;color:#6b7f95"><strong style="color:#C9A84C">Mondays & Tuesdays</strong></p></div>
                 </div>
 
             </div>
@@ -133,11 +103,9 @@
 
     <footer class="footer"><div class="container">
         <div class="footer-grid">
-            <div class="footer-brand"><span class="logo-text-footer">Rahma Islamic Centre</span><p>Serving Muslims in Winnipeg since 2016.</p></div>
-            <div class="footer-col"><h4>Navigation</h4><ul><li><a href="index.html">Home</a></li><li><a href="prayer-times.html">Prayer Times</a></li><li><a href="programs.html">Programs & Services</a></li><li><a href="education.html">Education</a></li><li><a href="events.html">Events</a></li><li><a href="about.html">About</a></li><li><a href="contact.html">Contact</a></li></ul></div>
-            <div class="footer-col"><h4>Contact</h4><div class="contact-li"><i class="fas fa-map-marker-alt"></i><span>574 Watt St, Winnipeg, MB</span></div><div class="contact-li"><i class="fas fa-phone"></i><span>+1 (431) 792-3791</span></div></div>
+            <div class="footer-brand"><span class="logo-text-footer">Rahma Islamic Centre</span></div>
+            <div class="footer-col"><h4>Contact</h4><p>574 Watt St, Winnipeg</p></div>
         </div>
     </div></footer>
-    <script src="shared.js"></script>
 </body>
 </html>
