--- a/programs.html
+++ b/programs.html
@@ -14,7 +14,7 @@
     <div id="loader"><div class="loader-text">RAHMA</div><div class="loader-bar"><div class="loader-fill"></div></div></div>
     <nav class="navbar" id="navbar">
         <div class="navbar-inner">
-            <a href="index.html" class="logo-wrap"><img src="logo.png" alt="Rahma Logo" class="logo-img"><div class="logo-text">Rahma Islamic Centre<span>Winnipeg, Canada</span></div></a>
+            <a href="index.html" class="logo-wrap"><img src="logo.png" alt="Logo" class="logo-img"><div class="logo-text">Rahma Islamic Centre<span>Winnipeg, Canada</span></div></a>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="prayer-times.html">Prayer Times</a></li>
@@ -35,69 +35,62 @@
 
     <section style="background:#fff;padding:80px 24px">
         <div class="container" style="max-width:1200px;margin:0 auto">
-            <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(300px,1fr));gap:30px">
+            <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(320px,1fr));gap:30px">
                 
-                <div style="background:#FAF6EE;padding:35px;border:1px solid rgba(201,168,76,0.2);border-radius:8px">
+                <div style="background:#FAF6EE;padding:35px;border-radius:8px;border:1px solid rgba(201,168,76,0.2)">
                     <div style="width:60px;height:60px;background:#0B1F3A;border-radius:10px;display:flex;align-items:center;justify-content:center;margin-bottom:20px">
-                        <i class="fas fa-hands-praying" style="color:#C9A84C;font-size:1.6rem"></i>
+                        <i class="fas fa-hands-praying" style="color:#C9A84C;font-size:1.8rem"></i>
                     </div>
-                    <h3 style="font-family:'Cinzel',serif;font-size:1.2rem;margin-bottom:12px;color:#0B1F3A">Spiritual Counseling</h3>
-                    <p style="font-size:0.95rem;color:#6b7f95;line-height:1.7;margin-bottom:12px">Free, appointment-based counseling for youth, adults, couples, and seniors. Referrals provided where needed.</p>
-                    <div style="font-size:0.85rem;color:#C9A84C;font-weight:500"><i class="fas fa-calendar-check"></i> By Appointment</div>
+                    <h3 style="font-family:'Cinzel',serif;font-size:1.2rem;margin-bottom:14px;color:#0B1F3A">Spiritual Counseling</h3>
+                    <p style="font-size:0.95rem;color:#6b7f95;line-height:1.7">Free, appointment-based counseling for youth, adults, couples, and seniors. Referrals provided where needed.</p>
                 </div>
 
-                <div style="background:#FAF6EE;padding:35px;border:1px solid rgba(201,168,76,0.2);border-radius:8px">
+                <div style="background:#FAF6EE;padding:35px;border-radius:8px;border:1px solid rgba(201,168,76,0.2)">
                     <div style="width:60px;height:60px;background:#0B1F3A;border-radius:10px;display:flex;align-items:center;justify-content:center;margin-bottom:20px">
-                        <i class="fas fa-hand-holding-heart" style="color:#C9A84C;font-size:1.6rem"></i>
+                        <i class="fas fa-hand-holding-heart" style="color:#C9A84C;font-size:1.8rem"></i>
                     </div>
-                    <h3 style="font-family:'Cinzel',serif;font-size:1.2rem;margin-bottom:12px;color:#0B1F3A">Food Bank</h3>
-                    <p style="font-size:0.95rem;color:#6b7f95;line-height:1.7;margin-bottom:12px">Supporting families in need with essential food supplies and groceries through our community food bank program.</p>
-                    <div style="font-size:0.85rem;color:#C9A84C;font-weight:500"><i class="fas fa-phone"></i> Contact for Details</div>
+                    <h3 style="font-family:'Cinzel',serif;font-size:1.2rem;margin-bottom:14px;color:#0B1F3A">Food Bank</h3>
+                    <p style="font-size:0.95rem;color:#6b7f95;line-height:1.7">Supporting families in need with essential food supplies and groceries through our community food bank program.</p>
                 </div>
 
-                <div style="background:#FAF6EE;padding:35px;border:1px solid rgba(201,168,76,0.2);border-radius:8px">
+                <div style="background:#FAF6EE;padding:35px;border-radius:8px;border:1px solid rgba(201,168,76,0.2)">
                     <div style="width:60px;height:60px;background:#0B1F3A;border-radius:10px;display:flex;align-items:center;justify-content:center;margin-bottom:20px">
-                        <i class="fas fa-comments" style="color:#C9A84C;font-size:1.6rem"></i>
+                        <i class="fas fa-comments" style="color:#C9A84C;font-size:1.8rem"></i>
                     </div>
-                    <h3 style="font-family:'Cinzel',serif;font-size:1.2rem;margin-bottom:12px;color:#0B1F3A">Da'in & Dialogue</h3>
-                    <p style="font-size:0.95rem;color:#6b7f95;line-height:1.7;margin-bottom:12px">Engaging in meaningful interfaith dialogue and community outreach to build bridges and understanding.</p>
-                    <div style="font-size:0.85rem;color:#C9A84C;font-weight:500"><i class="fas fa-users"></i> Ongoing Initiative</div>
+                    <h3 style="font-family:'Cinzel',serif;font-size:1.2rem;margin-bottom:14px;color:#0B1F3A">Da'in & Dialogue</h3>
+                    <p style="font-size:0.95rem;color:#6b7f95;line-height:1.7">Engaging in meaningful interfaith dialogue and community outreach to build bridges and understanding.</p>
                 </div>
 
-                <div style="background:#FAF6EE;padding:35px;border:1px solid rgba(201,168,76,0.2);border-radius:8px">
+                <div style="background:#FAF6EE;padding:35px;border-radius:8px;border:1px solid rgba(201,168,76,0.2)">
                     <div style="width:60px;height:60px;background:#0B1F3A;border-radius:10px;display:flex;align-items:center;justify-content:center;margin-bottom:20px">
-                        <i class="fas fa-ring" style="color:#C9A84C;font-size:1.6rem"></i>
+                        <i class="fas fa-ring" style="color:#C9A84C;font-size:1.8rem"></i>
                     </div>
-                    <h3 style="font-family:'Cinzel',serif;font-size:1.2rem;margin-bottom:12px;color:#0B1F3A">Marriage (Nikah)</h3>
-                    <p style="font-size:0.95rem;color:#6b7f95;line-height:1.7;margin-bottom:12px">Islamic marriage contracts performed in full compliance with Manitoba and Canadian law.</p>
-                    <div style="font-size:0.85rem;color:#C9A84C;font-weight:500"><i class="fas fa-file-contract"></i> Legal & Islamic</div>
+                    <h3 style="font-family:'Cinzel',serif;font-size:1.2rem;margin-bottom:14px;color:#0B1F3A">Marriage (Nikah)</h3>
+                    <p style="font-size:0.95rem;color:#6b7f95;line-height:1.7">Islamic marriage contracts in compliance with Manitoba and Canadian law.</p>
                 </div>
 
-                <div style="background:#FAF6EE;padding:35px;border:1px solid rgba(201,168,76,0.2);border-radius:8px">
+                <div style="background:#FAF6EE;padding:35px;border-radius:8px;border:1px solid rgba(201,168,76,0.2)">
                     <div style="width:60px;height:60px;background:#0B1F3A;border-radius:10px;display:flex;align-items:center;justify-content:center;margin-bottom:20px">
-                        <i class="fas fa-dove" style="color:#C9A84C;font-size:1.6rem"></i>
+                        <i class="fas fa-dove" style="color:#C9A84C;font-size:1.8rem"></i>
                     </div>
-                    <h3 style="font-family:'Cinzel',serif;font-size:1.2rem;margin-bottom:12px;color:#0B1F3A">Funeral Support</h3>
-                    <p style="font-size:0.95rem;color:#6b7f95;line-height:1.7;margin-bottom:12px">Dignified, affordable funeral arrangements aligned with Islamic teachings and community support.</p>
-                    <div style="font-size:0.85rem;color:#C9A84C;font-weight:500"><i class="fas fa-phone-alt"></i> 24/7 Support</div>
+                    <h3 style="font-family:'Cinzel',serif;font-size:1.2rem;margin-bottom:14px;color:#0B1F3A">Funeral Support</h3>
+                    <p style="font-size:0.95rem;color:#6b7f95;line-height:1.7">Dignified, affordable funeral arrangements aligned with Islamic teachings and community support.</p>
                 </div>
 
-                <div style="background:#FAF6EE;padding:35px;border:1px solid rgba(201,168,76,0.2);border-radius:8px">
+                <div style="background:#FAF6EE;padding:35px;border-radius:8px;border:1px solid rgba(201,168,76,0.2)">
                     <div style="width:60px;height:60px;background:#0B1F3A;border-radius:10px;display:flex;align-items:center;justify-content:center;margin-bottom:20px">
-                        <i class="fas fa-chalkboard-teacher" style="color:#C9A84C;font-size:1.6rem"></i>
+                        <i class="fas fa-chalkboard-teacher" style="color:#C9A84C;font-size:1.8rem"></i>
                     </div>
-                    <h3 style="font-family:'Cinzel',serif;font-size:1.2rem;margin-bottom:12px;color:#0B1F3A">Religious Workshops</h3>
-                    <p style="font-size:0.95rem;color:#6b7f95;line-height:1.7;margin-bottom:12px">Practical sessions addressing faith and contemporary issues relevant to modern Muslim life.</p>
-                    <div style="font-size:0.85rem;color:#C9A84C;font-weight:500"><i class="fas fa-calendar-alt"></i> Monthly Sessions</div>
+                    <h3 style="font-family:'Cinzel',serif;font-size:1.2rem;margin-bottom:14px;color:#0B1F3A">Religious Workshops</h3>
+                    <p style="font-size:0.95rem;color:#6b7f95;line-height:1.7">Practical sessions on faith and contemporary issues relevant to modern Muslim life.</p>
                 </div>
 
-                <div style="background:#FAF6EE;padding:35px;border:1px solid rgba(201,168,76,0.2);border-radius:8px">
+                <div style="background:#FAF6EE;padding:35px;border-radius:8px;border:1px solid rgba(201,168,76,0.2)">
                     <div style="width:60px;height:60px;background:#0B1F3A;border-radius:10px;display:flex;align-items:center;justify-content:center;margin-bottom:20px">
-                        <i class="fas fa-kaaba" style="color:#C9A84C;font-size:1.6rem"></i>
+                        <i class="fas fa-kaaba" style="color:#C9A84C;font-size:1.8rem"></i>
                     </div>
-                    <h3 style="font-family:'Cinzel',serif;font-size:1.2rem;margin-bottom:12px;color:#0B1F3A">Hajj & 'Umrah Guidance</h3>
-                    <p style="font-size:0.95rem;color:#6b7f95;line-height:1.7;margin-bottom:12px">Comprehensive workshops and accurate, up-to-date resources available online and at the Centre.</p>
-                    <div style="font-size:0.85rem;color:#C9A84C;font-weight:500"><i class="fas fa-map-marked-alt"></i> Pre-Trip Planning</div>
+                    <h3 style="font-family:'Cinzel',serif;font-size:1.2rem;margin-bottom:14px;color:#0B1F3A">Hajj & 'Umrah Guidance</h3>
+                    <p style="font-size:0.95rem;color:#6b7f95;line-height:1.7">Comprehensive workshops and accurate, up-to-date resources (online & at the Centre).</p>
                 </div>
 
             </div>
@@ -106,11 +99,9 @@
 
     <footer class="footer"><div class="container">
         <div class="footer-grid">
-            <div class="footer-brand"><span class="logo-text-footer">Rahma Islamic Centre</span><p>Serving Muslims in Winnipeg since 2016.</p></div>
-            <div class="footer-col"><h4>Navigation</h4><ul><li><a href="index.html">Home</a></li><li><a href="prayer-times.html">Prayer Times</a></li><li><a href="programs.html">Programs & Services</a></li><li><a href="education.html">Education</a></li><li><a href="events.html">Events</a></li><li><a href="about.html">About</a></li><li><a href="contact.html">Contact</a></li></ul></div>
-            <div class="footer-col"><h4>Contact</h4><div class="contact-li"><i class="fas fa-map-marker-alt"></i><span>574 Watt St, Winnipeg, MB</span></div><div class="contact-li"><i class="fas fa-phone"></i><span>+1 (431) 792-3791</span></div></div>
+            <div class="footer-brand"><span class="logo-text-footer">Rahma Islamic Centre</span><p>Serving Winnipeg since 2016</p></div>
+            <div class="footer-col"><h4>Contact</h4><p>574 Watt St, Winnipeg</p><p>+1 (431) 792-3791</p></div>
         </div>
     </div></footer>
-    <script src="shared.js"></script>
 </body>
 </html>
