--- a/contact.html
+++ b/contact.html
@@ -30,17 +30,27 @@
 </head>
 <body>
     <div id="loader"><div class="loader-text">RAHMA</div><div class="loader-bar"><div class="loader-fill"></div></div></div>
-    <div class="mobile-menu" id="mobileMenu">
-        <a href="index.html" onclick="closeMobile()">Home</a><a href="prayer-times.html" onclick="closeMobile()">Prayer Times</a>
-        <a href="activities.html" onclick="closeMobile()">Activities</a><a href="about.html" onclick="closeMobile()">About Us</a>
-        <a href="contact.html" onclick="closeMobile()">Contact</a><a href="donate.html" class="mobile-donate" onclick="closeMobile()">Donate</a>
+        <div class="mobile-menu" id="mobileMenu">
+        <a href="index.html" onclick="closeMobile()">Home</a>
+        <a href="prayer-times.html" onclick="closeMobile()">Prayer Times</a>
+        <a href="programs.html" onclick="closeMobile()">Programs & Services</a>
+        <a href="education.html" onclick="closeMobile()">Education</a>
+        <a href="events.html" onclick="closeMobile()">Events</a>
+        <a href="about.html" onclick="closeMobile()">About</a>
+        <a href="contact.html" onclick="closeMobile()">Contact</a>
+        <a href="donate.html" class="mobile-donate" onclick="closeMobile()">Donate</a>
     </div>
     <nav class="navbar" id="navbar">
         <div class="navbar-inner">
             <a href="index.html" class="logo-wrap"><img src="logo.png" alt="Rahma Logo" class="logo-img"><div class="logo-text">Rahma Islamic Centre<span>Winnipeg, Canada</span></div></a>
-            <ul class="nav-links">
-                <li><a href="index.html">Home</a></li><li><a href="prayer-times.html">Prayer Times</a></li>
-                <li><a href="activities.html">Activities</a></li><li><a href="about.html">About Us</a></li><li><a href="contact.html" class="active">Contact</a></li>
+                        <ul class="nav-links">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="prayer-times.html">Prayer Times</a></li>
+                <li><a href="programs.html">Programs & Services</a></li>
+                <li><a href="education.html">Education</a></li>
+                <li><a href="events.html">Events</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
             <a href="donate.html" class="nav-donate">Donate</a>
             <div class="hamburger" id="hamburger" onclick="toggleMobile()"><span></span><span></span><span></span></div>
