--- a/newsletter.html
+++ b/newsletter.html
@@ -300,7 +300,7 @@
                 <div class="footer-col"><h4>Contact</h4>
                     <div class="contact-li"><i class="fas fa-map-marker-alt"></i><span>574 Watt St, Winnipeg, MB R2K 4K1</span></div>
                     <div class="contact-li"><i class="fas fa-phone"></i><span>+1 (431) 792-3791</span></div>
-                    <div class="contact-li"><i class="fas fa-envelope"></i><span><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="5a33343c351a283b32373b393f342e283f74393b">[email&#160;protected]</a></span></div>
+                    <div class="contact-li"><i class="fas fa-envelope"></i><span><a href="mailto:info@rahmacentre.ca" class="__cf_email__" data-cfemail="5a33343c351a283b32373b393f342e283f74393b">[email&#160;protected]</a></span></div>
                 </div>
             </div>
             <div class="footer-bottom">
@@ -310,7 +310,7 @@
         </div>
     </footer>
 
-    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="shared.js"></script>
+    <script src="shared.js"></script>
     <script>
         document.getElementById('newsletterForm').addEventListener('submit', function(e) {
             e.preventDefault();
