--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
 
         /* Mission */
         .mission-section { background: linear-gradient(135deg, var(--navy) 0%, var(--navy-mid) 100%); padding: 110px 24px; position: relative; overflow: hidden; }
-        .mission-pattern { position: absolute; top: 50%; left: 50%; width: 160%; height: 160%; transform: translate(-50%,-50%); background-image: url('islamic-pattern.png'); background-repeat: repeat; background-size: 380px; opacity: 0.05; pointer-events: none; animation: patternRotate 80s linear infinite; }
+        .mission-pattern { position: absolute; inset:0; background-image: url('islamic-pattern.png'); background-repeat: repeat; background-size: 380px; opacity: 0.05; pointer-events: none; animation: patternDrift 70s linear infinite; }
         .mission-inner { position: relative; z-index: 1; display: grid; grid-template-columns: 1fr 1fr; gap: 80px; align-items: center; }
         .mission-img img { width: 100%; display: block; filter: grayscale(20%) brightness(0.8); }
         .mission-text .section-title { color: var(--white); }
@@ -174,3 +174,10 @@
             <div class="footer-col"><h4>Contact</h4><div class="contact-li"><i class="fas fa-map-marker-alt"></i><span>574 Watt St, Winnipeg, MB R2K 4K1</span></div><div class="contact-li"><i class="fas fa-phone"></i><span>+1 (431) 792-3791</span></div><div class="contact-li"><i class="fas fa-envelope"></i><span><a href="mailto:info@rahmacentre.ca" class="__cf_email__" data-cfemail="1871767e77586a797075797b7d766c6a7d367b79">[email&#160;protected]</a></span></div></div>
         </div>
         <div class="footer-bottom"><span>Copyright &copy; 2026 Rahma Islamic Centre. All rights reserved.</span>
+            <span>Powered by Devodez Solutions</span>
+        </div>
+    </div></footer>
+
+    <script src="shared.js"></script>
+</body>
+</html>
