--- a/prayer-times.html
+++ b/prayer-times.html
@@ -13,7 +13,7 @@
     <style>
         /* ─── TODAY WIDGET ─── */
         .today-widget { background: var(--navy); padding: 70px 24px; position: relative; overflow: hidden; }
-        .today-widget-pattern { position: absolute; inset: 0; background-image: url('islamic-pattern.png'); background-repeat: repeat; background-size: 380px; opacity: 0.05; animation: patternRotate 80s linear infinite; }
+        .today-widget-pattern { position: absolute; inset: 0; background-image: url('islamic-pattern.png'); background-repeat: repeat; background-size: 380px; opacity: 0.05; animation: patternDrift 70s linear infinite; }
         .today-inner { position: relative; z-index: 1; max-width: 1200px; margin: 0 auto; }
 
         .today-top { display: flex; justify-content: space-between; align-items: flex-end; margin-bottom: 28px; flex-wrap: wrap; gap: 16px; }
