--- a/newsletter.html
+++ b/newsletter.html
@@ -61,13 +61,10 @@
             position: relative; overflow: hidden;
         }
         .nl-form-pattern {
-            position: absolute; top: 50%; left: 50%;
-            width: 160%; height: 160%;
-            transform: translate(-50%,-50%);
-            background-image: url('islamic-pattern.png');
+            position: absolute; inset:0; background-image: url('islamic-pattern.png');
             background-repeat: repeat; background-size: 300px;
             opacity: 0.05; pointer-events: none;
-            animation: patternRotate 80s linear infinite;
+            animation: patternDrift 70s linear infinite;
         }
         .nl-form-inner { position: relative; z-index: 1; }
         .nl-form-box h3 {
